# Task-Space-Impedance-Control-for-the-Panda-Robot

./: README.md
install/: local_setup.sh  setup.sh
install/acg_resources_panda_description/share/acg_resources_panda_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/acg_resources_panda_moveit_config/share/acg_resources_panda_moveit_config/: .setup_assistant  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/acg_resources_panda_trajectory_analyzer/lib/acg_resources_panda_trajectory_analyzer/: trajectory_analyzer
install/acg_resources_panda_trajectory_analyzer/share/acg_resources_panda_trajectory_analyzer/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/acg_resources_panda_trajectory_generation/lib/acg_resources_panda_trajectory_generation/: data_generator_executable
install/acg_resources_panda_trajectory_generation/share/acg_resources_panda_trajectory_generation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cartesian_control_msgs/share/cartesian_control_msgs/: local_setup.sh  package.dsv  package.ps1  package.sh
install/inverse_dynamics_solver/include/inverse_dynamics_solver/: inverse_dynamics_solver.h
install/inverse_dynamics_solver/share/inverse_dynamics_solver/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kdl_inverse_dynamics_solver/include/kdl_inverse_dynamics_solver/: exceptions.h  kdl_inverse_dynamics_solver.h
install/kdl_inverse_dynamics_solver/lib/kdl_inverse_dynamics_solver/: kdl_inverse_dynamics_solver_test
install/kdl_inverse_dynamics_solver/share/kdl_inverse_dynamics_solver/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/panda_impedance_controller/include/panda_impedance_controller_parameters/: panda_impedance_controller_parameters.hpp
install/panda_impedance_controller/lib/panda_impedance_controller/: calculate_pose
install/panda_impedance_controller/share/panda_impedance_controller/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/panda_moveit_planning_demo/include/panda_moveit_planning_demo/: task_space_client_utils.hpp
install/panda_moveit_planning_demo/include/task_space_client_utils_parameters/: task_space_client_utils_parameters.hpp
install/panda_moveit_planning_demo/lib/panda_moveit_planning_demo/: panda_moveit_cartesian_demo  panda_moveit_cartesian_demo_nobag  panda_moveit_planning_node
install/panda_moveit_planning_demo/share/panda_moveit_planning_demo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros_extensions_utilities/include/ros_extensions_utilities/: exceptions.h  ros_extensions_utils.h
install/ros_extensions_utilities/share/ros_extensions_utilities/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/panda_impedance_controller/acg_resources_panda_description/: README.md  package.xml
src/panda_impedance_controller/acg_resources_panda_description/config/: inertial.yaml
src/panda_impedance_controller/acg_resources_panda_description/launch/: display.launch.py
src/panda_impedance_controller/acg_resources_panda_description/urdf/: panda.xacro
src/panda_impedance_controller/acg_resources_panda_moveit_config/: CMakeLists.txt  README.md  package.xml
src/panda_impedance_controller/acg_resources_panda_moveit_config/config/: cartesian_impedance_tuning.rviz  initial_positions.yaml  kinematics.yaml  panda.urdf.xacro
src/panda_impedance_controller/acg_resources_panda_moveit_config/launch/: demo.launch.py  gazebo_ros2_control_demo.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/panda_impedance_controller/acg_resources_panda_trajectory_analyzer/: README.md  package.xml  setup.cfg  setup.py
src/panda_impedance_controller/acg_resources_panda_trajectory_analyzer/acg_resources_panda_trajectory_analyzer/: trajectory_analyzer.py
src/panda_impedance_controller/acg_resources_panda_trajectory_analyzer/test/: test_copyright.py  test_flakes8.py  test_pep257.py
src/panda_impedance_controller/acg_resources_panda_trajectory_generation/: README.md  package.xml  setup.cfg  setup.py
src/panda_impedance_controller/cartesian_control_msgs/: CMakeLists.txt  README.md  package.xml
src/panda_impedance_controller/inverse_dynamics_solver/: CMakeLists.txt  README.md  package.xml
src/panda_impedance_controller/kdl_inverse_dynamics_solver/: CMakeLists.txt  package.xml
src/panda_impedance_controller/kdl_inverse_dynamics_solver/src/: kdl_inverse_dynamics_solver.cpp
src/panda_impedance_controller/kdl_inverse_dynamics_solver/test/: test_kdl_inverse_dynamics_solver.cpp
src/panda_impedance_controller/panda_impedance_controller/: CMakeLists.txt  README.md  package.xml  panda_impedance_controller.xml
src/panda_impedance_controller/panda_impedance_controller/include/panda_impedance_controller/: impedance_controller.hpp
src/panda_impedance_controller/panda_impedance_controller/src/: calculate_pose.cpp  impedance_controller.cpp  impedance_controller_parameters.yaml
src/panda_impedance_controller/panda_moveit_planning_demo/: CMakeLists.txt  README.md  package.xml
src/panda_impedance_controller/panda_moveit_planning_demo/include/: bag_file_utils.hpp  moveit_utils.hpp
src/panda_impedance_controller/panda_moveit_planning_demo/launch/: demo.launch.py  panda_moveit_cartesian_demo.launch.py  panda_moveit_planning_node.launch.py
src/panda_impedance_controller/panda_moveit_planning_demo/src/: bag_file_utils.cpp  moveit_utils.cpp  panda_moveit_cartesian_demo.cpp  panda_moveit_cartesian_demo_nobag.cpp  panda_moveit_planning_node.cpp  task_space_client_utils.cpp  task_space_client_utils_parameters.yaml
src/panda_impedance_controller/ros_extensions_utilities/: CMakeLists.txt  package.xml
(+66 files in other folders)
