<?xml version="1.0"?>
<package format="3">
  <name>acg_resources_panda_description</name>
  <version>2.0.6</version>
  <description>Panda description </description>

  <author email="b.squitieri@unisa.it">Beniamino Squitieri</author>

  <maintainer email="b.squitieri@unisa.it">Beniamino Squitieri</maintainer>

  <license>BSD</license>
  <url type="repository">https://bitbucket.org/unisa-acg/unisa_acg_ros2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
