<?xml version="1.0"?>
<package format="3">
  <name>acg_resources_panda_description</name>
  <version>2.0.6</version>
  <description>Panda description </description>

  <author email="bennibeniamino@gmail.com">Beniamino Squitieri</author>

  <maintainer email="bennibeniamino@gmail.com">Beniamino Squitieri</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
