<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acg_resources_panda_trajectory_generation</name>
  <version>0.1.0</version>
  <description>A package for recording sensor data to ROS 2 bags using Python nodes</description>
  <!-- Author information -->
  <author email="bennibeniamino@gmail.com">Beniamino Squitieri</author>
  <!-- Maintainer information -->
  <maintainer email="bennibeniamino@gmail.com">Beniamino Squitieri</maintainer>
  <!-- License information -->
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>rosbag2_py</depend>
  <depend>example_interfaces</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
