<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_moveit_planning_demo</name>
  <version>0.0.0</version>
  <description>Application package containing a demonstration of MoveIt! planning functions applied to the Panda robot</description>
  <author email="bennibeniamino@gmail.com">Beniamino Squitieri</author>
  <maintainer email="bennibeniamino@gmail.com">Beniamino Squitieri</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rosbag2_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>cartesian_control_msgs</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>tf2_eigen</depend>
  <exec_depend>acg_resources_panda_moveit_config</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
